src/test/fail/update_empty_multidimensional_array_fail.egern
var a = [[], []]
a[0] = [2, 3]
a[1] = [true, false]
